# gerenciador-encomendas

./: .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
app/: database.py  main.py
app/models/: __init__.py  encomenda.py
app/routers/: produtos.py
app/schemas/: produto.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 196a591c7789_initial_migration.py
backend/app/: database.py
backend/app/models/: __init__.py  item_encomenda.py  produto.py
backend/app/routers/: encomendas.py
backend/app/schemas/: encomenda.py
frontend/: README.md
